# pico-ir-remote

./: LICENSE.txt  README.md
android-app/: build.gradle
android-app/app/src/main/assets/: Bedroom.ir  Samsung.ir  TCL_Roku_TV.ir
android-app/app/src/main/java/de/kai_morich/simple_usb_terminal/: TerminalFragment.java
android-app/app/src/main/res/layout/: fragment_terminal.xml
android-app/app/src/main/res/values/: strings.xml
android-app/gradle/wrapper/: gradle-wrapper.properties
pcb/KiCad Projects/Micro-to-C-Adapter/MICRO-C-ADAPTER/: MICRO-C-ADAPTER.kicad_pcb  MICRO-C-ADAPTER.kicad_prl  MICRO-C-ADAPTER.kicad_pro  MICRO-C-ADAPTER.kicad_sch
pcb/KiCad Projects/Micro-to-C-Adapter/MICRO-C-ADAPTER/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/KiCad Projects/Pico C/: RPI-PICO-R3a-PUBLIC-B_Cu.gbr  RPI-PICO-R3a-PUBLIC-B_Mask.gbr  RPI-PICO-R3a-PUBLIC-B_Paste.gbr  RPI-PICO-R3a-PUBLIC-B_Silkscreen.gbr  RPI-PICO-R3a-PUBLIC-Edge_Cuts.gbr  RPI-PICO-R3a-PUBLIC-F_Cu.gbr  RPI-PICO-R3a-PUBLIC-F_Mask.gbr  RPI-PICO-R3a-PUBLIC-F_Paste.gbr  RPI-PICO-R3a-PUBLIC-F_Silkscreen.gbr  RPI-PICO-R3a-PUBLIC-NPTH.drl  RPI-PICO-R3a-PUBLIC-PTH.drl  RPI-PICO-R3a-PUBLIC-bottom-pos.csv  RPI-PICO-R3a-PUBLIC-top-pos.csv  RPI-PICO-R3a-PUBLIC.kicad_pcb  RPI-PICO-R3a-PUBLIC.kicad_prl  RPI-PICO-R3a-PUBLIC.kicad_pro  RPI-PICO-R3a-PUBLIC.kicad_sch  fp-info-cache  ~RPI-PICO-R3a-PUBLIC.kicad_sch.lck
pcb/KiCad Projects/Pico C/bom/: RPI-PICO-R3a-PUBLIC-top-pos.csv  RPI-PICO-R3a-PUBLIC.csv
pcb/KiCad Projects/Pico C/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/KiCad Projects/Pico WH - No License/: Pico WH.kicad_prl
pico-firmware/: .gitignore  CMakeLists.txt  infrared.c  infrared.h  infrared.pio  main.cpp  test-raw.py
pico-firmware/common/: infrared_common_decoder.c  infrared_common_encoder.c
pico-firmware/documentation/: emmc-adapter-pcb-pinout.txt
pico-firmware/kaseikyo/: infrared_decoder_kaseikyo.c  infrared_encoder_kaseikyo.c
pico-firmware/nec/: infrared_decoder_nec.c  infrared_encoder_nec.c
pico-firmware/pioneer/: infrared_decoder_pioneer.c  infrared_encoder_pioneer.c
pico-firmware/rc5/: infrared_decoder_rc5.c  infrared_encoder_rc5.c
pico-firmware/rc6/: infrared_decoder_rc6.c  infrared_encoder_rc6.c
pico-firmware/rca/: infrared_decoder_rca.c  infrared_encoder_rca.c
pico-firmware/samsung/: infrared_decoder_samsung.c  infrared_encoder_samsung.c
pico-firmware/sirc/: infrared_decoder_sirc.c  infrared_encoder_sirc.c
